# flakes

./: AGENTS.md
basicFlake/: flake.nix
bazecor/: flake.nix
default/: flake.nix  home.nix
default/nixos/: configuration.nix  hardware-configuration.nix
home-manager/: flake.nix  home.nix
hyprland/: flake.nix  home.nix
hyprland/nixos/: configuration.nix  hardware-configuration.nix
juxcluster/: amaliepc.nix  flake.nix  home.nix  juxpc.nix  juxserver.nix  juxshared.nix
juxcluster/nixos/: configuration-amaliepc.nix  configuration-juxpc.nix  configuration-juxserver.nix  configuration.nix  hardware-configuration-amaliepc.nix  hardware-configuration-juxserver.nix
juxpc/: flake.nix
juxpc/.vst3/: sfizz.vst3
juxpc/nixos/: configuration.nix
juxserver/: flake.nix
juxserver/.vst3/: Surge XT.vst3
python-demo/: flake.nix  pyproject.toml
python-dnn/: flake.nix
template/: flake.nix  hardware.nix  home.nix
