[project]
name = "python-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "pytorch-cuda==12.1",
  "matplotlib",
  "numpy",
  "seaborn",
  "scikit-learn",
  "tqdm",
  "debugpy"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121" },
]
torchvision = [
  { index = "pytorch-cu121" },
]
pytorch-cuda = [
  { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

